# winch-calcs

./: .gitignore  README.md  pyproject.toml
data/skate_calibration/gps/: 20241005-120033 - 1.gpx  20241005-120033 - 1.kml  20241005-120556 - 2.gpx  20241005-120556 - 2.kml  20241005-121248 - 3.gpx  20241005-121248 - 3.kml  20241005-121609 - 4.kml  4.gpx
data/skate_calibration/winch/: 4_screenlog.0
src/winch_berechnung/: __init__.py  berechnung.ipynb
