[project]
name = "winch-berechnung"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "develmusa", email = "contact@develmusa.digital" }
]
dependencies = [
    "notebook>=7.2.2",
    "jupyterlab>=4.2.5",
    "plotly>=5.24.1",
    "pandas>=2.2.3",
    "ipywidgets>=8.1.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/winch_berechnung"]
